--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      href="/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link
+      rel="icon"
+      href="/favicon.ico" />
+    <title>籃球戰情室 Basketball Competition Dashboard</title>
   </head>
 
   <body>
