--- a/index.html
+++ b/index.html
@@ -1,21 +1,39 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0" />
+    <title>籃球戰情室 BCD</title>
+    <link
+      rel="apple-touch-icon"
+      href="/apple-touch-icon.png" />
+    <link
+      rel="icon"
+      href="/favicon-32x32.png"
+      type="image/png"
+      sizes="32x32" />
+    <link
+      rel="icon"
+      href="/favicon-16x16.png"
+      type="image/png"
+      sizes="16x16" />
+    <link
+      rel="icon"
+      href="/favicon.ico" />
+    <link
+      rel="manifest"
+      href="/site.webmanifest" />
+    <meta
+      name="theme-color"
+      content="#CA1230" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>籃球戰情室 BCD</title>
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link rel="icon" href="/favicon-32x32.png" type="image/png" sizes="32x32">
-  <link rel="icon" href="/favicon-16x16.png" type="image/png" sizes="16x16">
-  <link rel="icon" href="/favicon.ico" />
-  <link rel="manifest" href="/site.webmanifest">
-  <meta name="theme-color" content="#CA1230">
-</head>
-
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
-</body>
-
+  <body>
+    <div id="app"></div>
+    <script
+      type="module"
+      src="/src/main.ts"></script>
+  </body>
 </html>
