--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0" />
+      content="width=device-width, initial-scale=1.0, user-scalable=0" />
     <title>籃球戰情室 BCD</title>
     <link
       rel="apple-touch-icon"
